# sze_a0t_temperature_monitoring

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.sh
launch/: launch_example1.launch.py  temperature_monitoring.launch.py
log/: latest_build
src/: temp_pub.cpp  temp_sub.cpp
